--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm":"5.7.1"
   },
   "scripts": {
-    "start":"nodemon index.js"
+    "start":"node index.js"
   },
   "author": "",
   "license": "ISC",
