--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\"  \"npm run client\" \"npm run webhook\" ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "webhook": "./sendgrid_webhook.sh"
+    "webhook": "./sendgrid_webhook.sh",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -22,12 +23,15 @@
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "jest": "^22.4.3",
     "localtunnel": "^1.9.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "path-parser": "^2.0.2",
+    "puppeteer": "^1.3.0",
+    "redis": "^2.8.0",
     "sendgrid": "^5.2.3",
     "stripe": "^5.7.0"
   }
