--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "node": "8.11.1",
     "npm": "5.6.0"
   },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./tests/setup.js"
+  },
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
