--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\"  \"npm run client\" \"npm run webhook\" ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "webhook": "./sendgrid_webhook.sh",
     "test": "jest"
   },
