--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.226.1",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
@@ -37,6 +38,7 @@
     "puppeteer": "^1.3.0",
     "redis": "^2.8.0",
     "sendgrid": "^5.2.3",
-    "stripe": "^5.7.0"
+    "stripe": "^5.7.0",
+    "uuid": "^3.2.1"
   }
 }
